--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -97,7 +97,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 9;
+  z-index: 8;
   background: rgba(0,0,0,.7);
   opacity: 0;
   pointer-events: none;
@@ -132,11 +132,25 @@ header {
   text-decoration: none;
 }
 
-.signup {
-  margin-left: 1130px;
+.header-menu:hover {
   color: black;
   text-decoration: none;
-  font-size: 17px;
+}
+
+// #signup {
+//   line-height: 60px;
+//   margin-left: 1130px;
+//   color: black;
+//   text-decoration: none;
+//   font-size: 17px;
+//   cursor: pointer;
+// }
+
+.menu-cover.signup-cover {
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .logout-button {
@@ -173,11 +187,11 @@ body {
 
 .login-contents {
   height: 200px;
+  margin-top: 67px;
 }
 
 .login-contents-text {
   text-align: center;
-  margin-top: 67px;
   font-size: 37px;
 }
 
