--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="login-contents">
-    <div class="login-contents-text">1人の時間に小さな喜びを</div>
+    <div class="login-contents-text">1人の時間に小さな喜びを。</div>
     <div class="login-buttons">
       <%= link_to "新規登録", new_user_path, class:"signup-btn" %>
       <%= link_to "ログイン", login_path, class:"login-btn" %>
