--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,10 +1,10 @@
 <% if logged_in? %>
   <% if Like.find_by(user_id: @current_user.id, recipe_id: @recipe.id) %>
-    <%= link_to destroy_like_path(@recipe.id), method: :post, remote: true do %>
+    <%= link_to destroy_like_path(@recipe.id), method: :post do %>
       <span class="fa fa-heart like-btn-unlike"></span>
     <% end %>
   <% else %>
-    <%= link_to create_like_path(@recipe.id), method: :post, remote: true do %>
+    <%= link_to create_like_path(@recipe.id), method: :post do %>
       <span class="fa fa-heart like-btn"></span>
     <% end %>
   <% end %>
