--- a/app/views/users/_stats.html.erb
+++ b/app/views/users/_stats.html.erb
@@ -1,21 +1,18 @@
 <% @user ||= set_current_user %>
-<div class="stats">
-  <a href="<%= following_user_path(@user) %>">
-    <strong id="following" class="stat">
-      <%= @user.following.count %>
-    </strong>
-    フォロー中
-  </a>
-  <a href="<%= followers_user_path(@user) %>">
-    <strong id="followers" class="stat">
-      <%= @user.followers.count %>
-    </strong>
-    フォロワー
-  </a>
-  <a class="like" href="<%= likes_user_path(@user) %>">
-    <strong id="likes" class="stat">
-      <%= @user.likes.count %>
-    </strong>
-    いいね！した投稿
-  </a>
-</div>
+<% if current_page?(user_path(@user)) %>
+  <div class="stats">
+    <%= render 'users/recipes_stat' %>
+  </div>
+<% elsif current_page?(following_user_path(@user)) %>
+  <div class="stats">
+    <%= render 'users/following_stat' %>
+  </div>
+<% elsif current_page?(followers_user_path(@user)) %>
+  <div class="stats">
+    <%= render 'users/followers_stat' %>
+  </div>
+<% elsif current_page?(likes_user_path(@user)) %>
+  <div class="stats">
+    <%= render 'users/likes_stat' %>
+  </div>
+<% end %>
