--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,4 +1,46 @@
-<div class="user-likes-main">
+<div class="users-show-main">
+  <div class="container">
+    <div class="users">
+      <div class="user">
+        <div class="user-image-name">
+          <div class="user-show-image">
+            <%= image_tag "/user_images/#{@user.image}", class:"user_show_image" %>
+          </div>
+          <div class="name-follow">
+            <h2><%= @user.user_name %></h2>
+            <%= render 'follow_form' if logged_in? %>
+          </div>
+        </div>
+        <p><%#= @user.email %></p>
+        <% if @user.id == @current_user.id %>
+          <%#= link_to "編集", edit_user_path(@user.id), class:"user_edit_button" %>
+        <% end %>
+        <div class="user-info">
+          <%= render 'users/stats' %>
+        </div>
+      </div>
+      <div class="likes-items">
+        <% @likes.each do |like| %>
+          <% recipe = Recipe.find_by(id: like.recipe_id) %>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="likes-center">
+              <img src="<%= "/cooking_images/#{recipe.cooking_image}" %>">
+            </div>
+            <div class="likes-bottom">
+              <%= link_to recipe.cooking_name, post_path(recipe.id) %>
+            </div>
+            <div class="likes-top">
+              <img src="<%= "/user_images/#{recipe.user.image}" %>">
+              <%= link_to recipe.user.user_name, user_path(recipe.user.id), class:"likes_user_name" %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="user-likes-main">
   <div class="container">
     <div class="likes-title">
       <h1>いいね！した投稿</h1>
@@ -21,4 +63,4 @@
       <% end %>
     </div>
   </div>
-</div>
+</div> -->
