--- a/app/views/posts/_cooking_name_fields.html.erb
+++ b/app/views/posts/_cooking_name_fields.html.erb
@@ -1,2 +1,3 @@
 <p>料理名</p>
-<textarea name="cooking_name" placeholder="おじいちゃんのかぼちゃジュース"><%= @recipe.cooking_name %></textarea>
+<%= f.text_field :cooking_name, placeholder="おじいちゃんのかぼちゃジュース" %>
+# <textarea name="cooking_name" placeholder="おじいちゃんのかぼちゃジュース"><%#= @recipe.cooking_name %></textarea>
