--- a/app/views/posts/_post_cooking_image.html.erb
+++ b/app/views/posts/_post_cooking_image.html.erb
@@ -3,4 +3,5 @@
   <span class="material-icons camera-icon">add_a_photo</span>
   <p>ファイルを選択</p>
   <p class="not-selected">※選択されていません</p>
+  <input id="image-loading" name="cooking_image" type="file">
 </label>
