--- a/app/views/posts/_ingredient_fields.html.erb
+++ b/app/views/posts/_ingredient_fields.html.erb
@@ -2,7 +2,7 @@
   <div class="new-ingredients">
     <div class="ingredient">
       <p class="ingredient">材料</p>
-      <textarea name="ingredient_1" placeholder="かぼちゃ"><%= @ingredient.ingredient_1 %></textarea>
+      <%= i.text_field :ingredient, placeholder: "材料" %>
     </div>
   </div>
 </div>
