--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="posts-new-main">
   <div class="container">
-    <%= form_tag update_post_path, multipart: true do %>
+    <h2 class="edit-recipe-title">レシピを編集</h2>
+    <%= form_with url: update_post_path do |f| %>
       <% @recipe.errors.full_messages.each do |message| %>
         <div class="edit-form-error">
           <%= message %>
@@ -17,36 +18,37 @@
         </div>
       <% end %>
       <div class="edit-post">
-        <div class="post-cooking-image posts-edit-content">
-          <p>料理画像</p>
-          <input name="cooking_image" type="file">
-        </div>
-        <div class="post-cooking_name posts-edit-content">
-          <p>料理名</p>
-          <textarea name="cooking_name"><%= @recipe.cooking_name %></textarea>
-        </div>
-        <div class="post-edit-ingredients">
-          <div class="edit-ingredients posts-new-content">
-            <p class="ingredient">材料</p>
-            <textarea name="ingredient_1"><%= @ingredient.ingredient_1 %></textarea>
-            <textarea name="ingredient_2"><%= @ingredient.ingredient_2 %></textarea>
-            <textarea name="ingredient_3"><%= @ingredient.ingredient_3 %></textarea>
+        <div class="edit-form">
+          <div class="post-cooking_name posts-edit-content posts-new-content">
+            <p>料理名</p>
+            <%= f.text_field :cooking_name, value: @recipe.cooking_name %>
           </div>
-        </div>
-        <div class="edit-cooking-steps posts-new-content">
-          <p class="edit-steps-letter">作り方</p>
-          <div class="edit-steps">
-            <textarea name="step_1"><%= @step.step_1 %></textarea>
-            <textarea name="step_2"><%= @step.step_2 %></textarea>
-            <textarea name="step_3"><%= @step.step_3 %></textarea>
+          <div class="post-cooking-image posts-edit-content posts-new-content">
+            <p>写真を変更する</p>
+            <label class="image-form">
+              <%= render 'posts/edit_cooking_image' %>
+              <%= f.file_field :cooking_image, value: @recipe.cooking_image %>
+            </label>
           </div>
-        </div>
-        <div class="post-comment posts-edit-content">
-          <p>コメント</p>
-          <textarea name="comment"><%= @recipe.comment %></textarea>
-        </div>
-        <div class="send-post">
-          <input type="submit" value="投稿する">
+          <div class="post-edit-ingredients">
+            <div class="edit-ingredients posts-new-content">
+              <p class="ingredient">材料</p>
+              <%= f.text_field :ingredient_1, value: @ingredient.ingredient_1 %>
+            </div>
+          </div>
+          <div class="edit-cooking-steps posts-new-content">
+            <p class="edit-steps-letter">作り方</p>
+            <div class="edit-steps">
+              <%= f.text_area :step_1, value: @step.step_1 %>
+            </div>
+          </div>
+          <div class="post-comment posts-new-content posts-edit-content">
+            <p>コメント</p>
+            <%= f.text_area :comment, value: @recipe.comment %>
+          </div>
+          <div class="send-post">
+            <%= f.submit "投稿する" %>
+          </div>
         </div>
       </div>
     <% end %>
