--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,6 +1,15 @@
-<h1>検索結果</h1>
-<% @results.each do |recipe| %>
-  <div class="recipes-result">
-    <%= link_to recipe.cooking_name, post_path(recipe.id) %>
-  </div>
-<% end %>
+<div class="search-recipes">
+  <h1>検索結果</h1>
+  <% @results.each do |recipe| %>
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="cooking-image">
+        <%= image_tag "/cooking_images/#{recipe.cooking_image}" %>
+      </div>
+      <div class="posts-bottom">
+        <p class="cooking-name">
+          <%= link_to recipe.cooking_name, post_path(recipe.id), class:"cooking_name" %>
+        </p>
+      </div>
+    </div>
+  <% end %>
+</div>
