--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,32 @@
 <div class="users-edit-main">
   <div class="container">
-    <%= form_tag user_path, method: :patch, multipart: true do %>
+    <%= form_with url: user_path, method: :patch, multipart: true do |f| %>
       <% @user.errors.full_messages.each do |message| %>
         <div class="error-message">
           <%= message %>
         </div>
       <% end %>
       <div class="edit-user">
+        <h1 class="edit-title">プロフィール編集</h1>
+        <div class="user-image">
+          <p>プロフィール画像</p>
+          <label class="image-form user-image-form">
+            <span class="material-icons camera-icon">add_a_photo</span>
+            <p>ファイルを選択</p>
+            <p class="not-selected"><%= @user.image %></p>
+            <%= f.file_field :image, value: @user.image %>
+          </label>
+        </div>
         <div class="user-name">
           <p>ユーザー名</p>
-          <input name="user_name" value="<%= @user.user_name %>">
+          <%= f.text_field :user_name, value: @user.user_name, class: "edit-info" %>
         </div>
         <div class="user-email">
           <p>メールアドレス</p>
-          <input name="email" value="<%= @user.email %>">
-        </div>
-        <div class="user-image">
-          <p>プロフィール画像</p>
-          <input name="image" type="file">
+          <%= f.text_field :email, value: @user.email, class: "edit-info" %>
         </div>
         <div class="send-edit-user">
-          <input class="send_edit_user" type="submit" value="登録する">
+          <%= f.submit "変更内容を保存" %>
         </div>
       </div>
     <% end %>
