--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,10 @@
             <h2><%= @user.user_name %></h2>
             <%= render 'follow_form' if logged_in? %>
           </div>
+          <% if @user.id == @current_user.id %>
+            <%= link_to "ユーザー情報を編集", edit_user_path(@user.id), class:"user_edit_button" %>
+          <% end %>
         </div>
-        <p><%#= @user.email %></p>
-        <% if @user.id == @current_user.id %>
-          <%#= link_to "編集", edit_user_path(@user.id), class:"user_edit_button" %>
-        <% end %>
         <div class="user-info">
           <%= render 'users/stats' %>
         </div>
