--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,6 +1,8 @@
 // index===================================================================
 .posts-index-main {
   height: auto;
+  width: 70%;
+  margin: auto;
 }
 
 .container {
@@ -9,7 +11,7 @@
 }
 
 .main-headline {
-  padding-left: 110px;
+  padding-left: 54px;
   margin: 50px 0 20px 0;
   font-size: 40px;
 }
@@ -21,7 +23,6 @@
 
 .posts-items {
   width: 980px;
-  margin-left: 60px;
 }
 
 .posts-item {
